community/gnome-desktop: upgrade to 3.35.91
This is a temporary bump to an unstable(-ish) releases so we can bump GNOME
Shell for now. GNOME-Desktop 3.36.0 should be released soon and probably doesn't
contain many changes other than translation updates

--- a/community/gnome-desktop/APKBUILD
+++ b/community/gnome-desktop/APKBUILD
@@ -1,13 +1,13 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-desktop
-pkgver=3.34.4
-pkgrel=1
+pkgver=3.35.91
+pkgrel=0
 pkgdesc="GNOME desktop core libraries"
 url="https://gitlab.gnome.org/GNOME/gnome-desktop"
 arch="all"
 license="GPL-2.0-or-later AND LGPL-2.1-or-later"
-depends_dev="xkeyboard-config gobject-introspection-dev gsettings-desktop-schemas-dev
+depends_dev="gobject-introspection-dev gsettings-desktop-schemas-dev
 	gtk+3.0-dev"
 makedepends="$depends_dev eudev-dev iso-codes-dev libseccomp-dev libx11-dev
 	itstool libxml2-utils gtk-doc meson glib-dev"
@@ -37,6 +37,5 @@ check() {
 package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
-
-sha512sums="de3ac71725f4cc55b22af4f6f04516d9a5cbdd27876f302fc78c864c1461e444967de3dae3a6944124b33335c9e6f4f96b9de63053c582917509b90844acbe3f  gnome-desktop-3.34.4.tar.xz
+sha512sums="286cc4863e008d16a5eaf86c7ee0b2d0a14b6c8001812626188226031c17c69e7c688774cd1d73b271ff52f13448f183af97190ff95e4ceac5112a4ece704569  gnome-desktop-3.35.91.tar.xz
 0f0d0ca5ec8227dc80107fea754978ea2db5b15b84fa59d35eea702409be91d5148f3bfbeb1c5a31b9e93c5f19d135806799dd1cb3f42336f862a80b35881d31  hardcode-musl-locales.patch"
