--- a/community/gjs/APKBUILD
+++ b/community/gjs/APKBUILD
@@ -1,37 +1,37 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gjs
-pkgver=1.58.5
+pkgver=1.64.0
 pkgrel=0
 pkgdesc="GNOME javascript library"
 url="https://wiki.gnome.org/Projects/Gjs"
 arch="all !s390x"
-license="MIT LGPL-2.0-or-later"
-makedepends="$depends_dev dbus gobject-introspection-dev mozjs60-dev mozjs60
-	gtk+3.0-dev cairo-dev"
+license="MIT AND LGPL-2.0-or-later"
+makedepends="dbus gobject-introspection-dev mozjs68-dev mozjs68
+	gtk+3.0-dev cairo-dev meson"
 checkdepends="xvfb-run"
 options="!check" # testCommandLine.sh fails
 subpackages="$pkgname-dev"
 source="https://download.gnome.org/sources/gjs/${pkgver%.*}/gjs-$pkgver.tar.xz"
 
 build() {
-	./configure \
-		--build=$CBUILD \
-		--host=$CHOST \
+	meson \
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--localstatedir=/var \
-		--disable-profiler
-	make
+		-Dprofile=disabled \
+		-Dinstalled_tests=false \
+		output
+	ninja -C output
 }
 
 check() {
-	xvfb-run make check
+	xvfb-run ninja -C output test
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="18ef3afc4403ed281e1e70a379fd68ffa537ffc20ab66d7faaefe51e03bb6a66e359e5ca2c0511e1c5f8c6adfce93601d011cfb9e9e6b0a18f8aa1f2398297c3  gjs-1.58.5.tar.xz"
+sha512sums="93d5417ebb74db16c3a943799fd1ef28e2a964ba8806944077c331458b312e99a880bec1ededcdc266510deced20f936cb47f3158907dc7ef760703ee8eabda7  gjs-1.64.0.tar.xz"
