--- a/community/gnome-system-monitor/APKBUILD
+++ b/community/gnome-system-monitor/APKBUILD
@@ -1,16 +1,18 @@
+# Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-system-monitor
-pkgver=3.32.1
-pkgrel=1
+pkgver=3.36.0
+pkgrel=0
 pkgdesc="GNOME system monitor"
 url="https://www.gnome.org/"
 arch="all !s390x"
 license="GPL-2.0-or-later"
 makedepends="gnome-desktop-dev libgtop-dev gtkmm3-dev
 	libxml2-dev librsvg-dev itstool libxml2-utils libxslt
-	libgtop-dev meson polkit-dev"
+	meson polkit-dev"
+checkdepends="appstream-glib desktop-file-utils"
 subpackages="$pkgname-doc $pkgname-lang"
-source="https://download.gnome.org/sources/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.xz"
+source="https://download.gnome.org/sources/gnome-system-monitor/${pkgver%.*}/gnome-system-monitor-$pkgver.tar.xz"
 
 build() {
 	meson \
@@ -32,4 +34,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="badfb98e4508096336bba4be79ce359cf4363649e97c1da534ed96a04de4bc57e12b84ed75bfa9086e00b61b6558ee4af25eee14f0d2636d3ee0b62956122cbd  gnome-system-monitor-3.32.1.tar.xz"
+sha512sums="b012f7192e7a8f0dc2c61a0656b92c384c424a45ea9b80261f1acf8c99669f009809721cf34f481b154143c4d5f498e5f28b698e0e59e5edba9957014dccf425  gnome-system-monitor-3.36.0.tar.xz"
