community/gnome-clocks: rebuild against gnome-desktop-3.35.91-r0

--- a/community/gnome-clocks/APKBUILD
+++ b/community/gnome-clocks/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-clocks
 pkgver=3.36.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Clock application designed for GNOME 3"
 url="https://wiki.gnome.org/Apps/Clocks"
 arch="all !s390x" # missing: libhandy
@@ -10,6 +10,7 @@ license="GPL-2.0-or-later"
 depends="gsettings-desktop-schemas"
 makedepends="meson glib-dev gtk+3.0-dev libgweather-dev gsound-dev gnome-desktop-dev
 	geoclue-dev geocode-glib-dev gettext-dev vala itstool libhandy-dev"
+checkdepends="appstream-glib desktop-file-utils"
 subpackages="$pkgname-lang $pkgname-doc"
 source="https://download.gnome.org/sources/gnome-clocks/${pkgver%.*}/gnome-clocks-$pkgver.tar.xz"
 
