--- a/community/phoc/APKBUILD
+++ b/community/phoc/APKBUILD
@@ -2,12 +2,13 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=phoc
 pkgver=0.1.6_git20200126
-pkgrel=1
+pkgrel=2
 pkgdesc="wlroots based Phone compositor for the Phosh shell"
 arch="all !s390x" # no wlroots
 url="https://source.puri.sm/Librem5/phoc"
 license="GPL-3.0-only"
-makedepends="meson ninja gobject-introspection-dev libinput-dev wayland-dev wayland-protocols libxkbcommon-dev wlroots-dev gnome-desktop-dev"
+makedepends="meson ninja gobject-introspection-dev libinput-dev wayland-dev
+	wayland-protocols libxkbcommon-dev wlroots-dev gnome-desktop-dev"
 checkdepends="xvfb-run"
 options="!check" # Needs fullblown EGL
 source="https://source.puri.sm/Librem5/phoc/-/archive/b7e3b683385891558ece51091780a7c54c99ded4/phoc-b7e3b683385891558ece51091780a7c54c99ded4.tar.gz
