community/gnome-desktop: add missing dep on xkeyboard-config

--- a/community/gnome-desktop/APKBUILD
+++ b/community/gnome-desktop/APKBUILD
@@ -10,7 +10,7 @@ license="GPL-2.0-or-later AND LGPL-2.1-or-later"
 depends_dev="gobject-introspection-dev gsettings-desktop-schemas-dev
 	gtk+3.0-dev"
 makedepends="$depends_dev eudev-dev iso-codes-dev libseccomp-dev libx11-dev
-	itstool libxml2-utils gtk-doc meson glib-dev"
+	itstool libxml2-utils gtk-doc meson glib-dev xkeyboard-config"
 depends="bubblewrap"
 options="!check" # Can't find its own GSettings schemas
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-dbg"
