testing/py3-shortuuid: upgrade to 1.0.1

--- a/testing/py3-shortuuid/APKBUILD
+++ b/testing/py3-shortuuid/APKBUILD
@@ -1,16 +1,15 @@
-# Maintainer: 
+# Maintainer:
 pkgname=py3-shortuuid
 _pkgname=shortuuid
-pkgver=0.5.0
-pkgrel=3
+pkgver=1.0.1
+pkgrel=0
 pkgdesc="Python library that generates short, pretty, unambiguous unique IDs"
 url="https://pypi.python.org/pypi/shortuuid/"
 arch="noarch"
 license="BSD-3-Clause"
 depends="python3"
 makedepends="py3-setuptools"
-source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz
-	fix-pep8-tests.patch"
+source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
 builddir="$srcdir/shortuuid-$pkgver"
 
 replaces="py-shortuuid" # Backwards compatibility
@@ -25,8 +24,7 @@ check() {
 }
 
 package() {
-        python3 setup.py install --prefix=/usr --root="$pkgdir"
+	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="bf0b804281af1a515979a104c22e0c0e5cf99fe55efe6e29bb4b4b0d1d5a78b1e83a2d0262d6c2e2c2745f5ea198153fba80718aabac2955c691e6cb9bd5f4b5  shortuuid-0.5.0.tar.gz
-ae5c0c8948006215fff591b025cb410ce434f20a0222194a15db4e7571d225a23761be3192b4427712cf3766156602195b53c00698d857cdc680664977eab813  fix-pep8-tests.patch"
+sha512sums="fd8eca4b8b944c591f51aba4fceedddf4adac7fb052a40304fff8590a535b451ffe15b48dde9164d4386be9f5ca9af824c936812bfb192991c443b20a1e38070  shortuuid-1.0.1.tar.gz"
