community/open-vm-tools: move script vm-support to /usr/sbin
It requires root privileges to run.

--- a/community/open-vm-tools/APKBUILD
+++ b/community/open-vm-tools/APKBUILD
@@ -133,9 +133,11 @@ package() {
 
 	cd "$pkgdir"
 
-	chmod -x ./etc/vmware-tools/*.conf*
+	chmod -x "$confdir"/*.conf*
 	mv "$confdir"/tools.conf.example "$confdir"/tools.conf
-	mv "$confdir"/vm-support ./usr/bin/vm-support
+
+	mkdir -p ./usr/sbin
+	mv "$confdir"/vm-support ./usr/sbin/vm-support
 
 	# *-vm-default scripts are identical and they are not supposed to be
 	# modified by the user, so move the script to /usr/share and symlink back.
