community/gnome-backgrounds: upgrade to 3.36.0

--- a/community/gnome-backgrounds/APKBUILD
+++ b/community/gnome-backgrounds/APKBUILD
@@ -1,12 +1,12 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-backgrounds
-pkgver=3.34.0
-pkgrel=2
+pkgver=3.36.0
+pkgrel=0
 pkgdesc="Default wallpaper set for GNOME"
 url="https://gitlab.gnome.org/GNOME/gnome-backgrounds"
 arch="noarch"
-license="GPL-2.0-or-later CC-BY-2.0 CC-BY-SA-2.0 CC-BY-SA-3.0"
+license="GPL-2.0-or-later AND CC-BY-2.0 AND CC-BY-SA-2.0 AND CC-BY-SA-3.0"
 makedepends="meson gettext-dev"
 options="!check" # no tests for wallpapers
 subpackages="$pkgname-lang"
@@ -26,4 +26,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="bea6df85611a845c1013091dfccfd1d1fc697781a74348d936c15f8cec1ace765c37e6f57fed403cc2c6a91a18e522c8cc3db74b2c2327cd3ed71371075a9834  gnome-backgrounds-3.34.0.tar.xz"
+sha512sums="5c30b6e70a49e85ddea5a46a37c2f690e4c62c68d582f040dfd4ecdd6d50f364469e27c51115a7b1ba72edd58776ad2005d9bbcfef337570e50111e9443d4a21  gnome-backgrounds-3.36.0.tar.xz"
