community/open-vm-tools: allow only u:root/g:vmware run vmware-* commands

--- a/community/open-vm-tools/APKBUILD
+++ b/community/open-vm-tools/APKBUILD
@@ -56,6 +56,7 @@ makedepends="
 	rpcgen
 	xmlsec-dev
 	"
+pkggroups="vmware"
 source="$pkgname-$pkgver.tar.gz::https://github.com/vmware/open-vm-tools/archive/stable-$_ver.tar.gz
 	0001-lib-misc-Recognize-Alpine-Linux.patch
 	0002-open-vm-tools-Add-disable-werror-configure-option.patch
@@ -128,6 +129,7 @@ check() {
 package() {
 	local confdir="$pkgdir/etc/vmware-tools"
 	local sharedir="$pkgdir/usr/share/$pkgname"
+	local i
 
 	make -C open-vm-tools install DESTDIR="$pkgdir"
 
@@ -154,6 +156,18 @@ package() {
 	# This script works with NetworkManager only.
 	# TODO: Write network script for Alpine.
 	rm -f "$confdir"/scripts/vmware/network
+
+	# These commands allow to modify some VM's parameters or write to VM's
+	# logs which is typically undesirable to be allowed to any user or
+	# process. Of course, this cannot prevent users from copying and
+	# running their own open-vm-tools binaries, but better than nothing...
+	# See also https://github.com/vmware/open-vm-tools/issues/288.
+	for i in vmtoolsd vmware-namespace-cmd vmware-rpctool \
+		vmware-toolbox-cmd vmware-xferlogs;
+	do
+		chgrp vmware ./usr/bin/$i
+		chmod 750 ./usr/bin/$i
+	done
 
 	install -D -m 755 "$srcdir"/$pkgname.initd ./etc/init.d/$pkgname
 	install -D -m 644 "$srcdir"/$pkgname.confd ./etc/conf.d/$pkgname
