community/open-vm-tools: fix perms for vmware-user-suid-wrappe

--- a/community/open-vm-tools/APKBUILD
+++ b/community/open-vm-tools/APKBUILD
@@ -82,6 +82,7 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/vmware/open-vm-tools/archive
 	$pkgname.logrotate
 	"
 builddir="$srcdir/$pkgname-stable-$_ver"
+options="suid"  # needed for vmware-user-suid-wrapper
 
 _subpackages="$subpackages"  # save for func _all
 _pluginsdir='usr/lib/open-vm-tools/plugins'
@@ -168,6 +169,8 @@ package() {
 		chgrp vmware ./usr/bin/$i
 		chmod 750 ./usr/bin/$i
 	done
+
+	chmod 4755 ./usr/bin/vmware-user-suid-wrapper
 
 	install -D -m 755 "$srcdir"/$pkgname.initd ./etc/init.d/$pkgname
 	install -D -m 644 "$srcdir"/$pkgname.confd ./etc/conf.d/$pkgname
