--- a/community/evince/APKBUILD
+++ b/community/evince/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=evince
 pkgver=3.36.0
-pkgrel=2
+pkgrel=3
 pkgdesc="simple document viewer for GTK+"
 url="https://wiki.gnome.org/Apps/Evince"
 arch="all !s390x" # Limited by adwaita-icon-theme needing librsvg
@@ -14,8 +14,7 @@ depends_dev="gtk+3.0-dev poppler-dev libsm-dev libevent-dev libxrandr-dev
 	tiff-dev gobject-introspection-dev libxml2-dev libspectre-dev"
 makedepends="$depends_dev itstool meson libexecinfo-dev nautilus-dev
 	adwaita-icon-theme-dev gtk-doc yelp-tools appstream-glib-dev
-	libgxps-dev gspell-dev gstreamer-dev libsecret-dev texlive-dev
-	gst-plugins-base-dev"
+	libgxps-dev gspell-dev gstreamer-dev libsecret-dev gst-plugins-base-dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-nautilus $pkgname-libs"
 source="https://download.gnome.org/sources/evince/${pkgver%.*}/evince-$pkgver.tar.xz"
 
