community/gnome-shell: pull in the right mutter, gjs and gnome-desktop version
Let's see why the builders don't do this.

--- a/community/gnome-shell/APKBUILD
+++ b/community/gnome-shell/APKBUILD
@@ -21,7 +21,7 @@ depends="accountsservice
 	ttf-cantarell
 	adwaita-icon-theme
 	gnome-themes-standard"
-makedepends="gnome-desktop-dev
+makedepends="gnome-desktop-dev>=3.35.91
 	libxml2-dev
 	libcanberra-dev
 	gobject-introspection-dev
@@ -29,8 +29,8 @@ makedepends="gnome-desktop-dev
 	libsoup-dev
 	polkit-dev
 	gcr-dev
-	gjs-dev
-	mutter-dev
+	gjs-dev>=1.64.0
+	mutter-dev>=3.36.0
 	libcroco-dev
 	pulseaudio-dev
 	evolution-data-server-dev evolution-dev
