--- a/community/open-vm-tools/APKBUILD
+++ b/community/open-vm-tools/APKBUILD
@@ -37,7 +37,6 @@ makedepends="
 	glib-dev
 	gtk+3.0-dev
 	gtkmm3-dev
-	icu-dev
 	libdnet-dev
 	libice-dev
 	libmspack-dev
@@ -108,7 +107,7 @@ build() {
 		--sysconfdir=/etc \
 		--without-dnet \
 		--without-xerces \
-		--with-icu \
+		--without-icu \
 		--with-x \
 		--without-kernel-modules \
 		--without-pam \
