community/rspamd: add libs sub package
Add libs sub package so the client rspamc can be installed on a seperate machine
without the rspamd base package

--- a/community/rspamd/APKBUILD
+++ b/community/rspamd/APKBUILD
@@ -3,9 +3,10 @@
 # Contributor: Nathan Angelacos <nangel@alpinelinux.org>
 # Contributor: TBK <alpine@jjtc.eu>
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
+# Contributor: Duncan Bellamy <dunk@denkimushi.com>
 pkgname=rspamd
 pkgver=2.4
-pkgrel=0
+pkgrel=1
 pkgdesc="Fast, free and open-source spam filtering system"
 url="https://rspamd.com/"
 arch="all"
@@ -34,6 +35,7 @@ install="$pkgname.pre-install $pkgname.post-upgrade"
 subpackages="
 	$pkgname-doc
 	$pkgname-client
+	$pkgname-libs
 	$pkgname-utils::noarch
 	$pkgname-controller::noarch
 	$pkgname-fuzzy::noarch
@@ -108,6 +110,13 @@ client() {
 	cd "$pkgdir"
 	mkdir -p "$subpkgdir"/usr/bin
 	mv ./usr/bin/rspamc-$pkgver "$subpkgdir"/usr/bin/rspamc
+}
+
+libs() {
+	pkgdesc="$pkgdesc (libraries)"
+
+	cd "$pkgdir"
+	amove usr/lib/$pkgname/*.so
 }
 
 utils() {
