community/miniupnpd: update initd, added check, patch for kernel 5.x
Fixes: https://gitlab.alpinelinux.org/alpine/aports/issues/11245

--- a/community/miniupnpd/APKBUILD
+++ b/community/miniupnpd/APKBUILD
@@ -2,21 +2,21 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=miniupnpd
 pkgver=2.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Lightweight UPnP IGD daemon"
 url="http://miniupnp.free.fr"
 arch="all"
 license="BSD-3-Clause"
-depends=""
-depends_dev=""
-makedepends="$depends_dev bsd-compat-headers iptables-dev libnfnetlink-dev"
-install=""
-subpackages="$pkgname-doc"
+makedepends="bsd-compat-headers iptables-dev libnfnetlink-dev"
+checkdepends="util-linux-dev"
+subpackages="$pkgname-doc $pkgname-openrc"
 source="http://miniupnp.free.fr/files/miniupnpd-$pkgver.tar.gz
 	$pkgname.initd
-	$pkgname.confd"
+	$pkgname.confd
+	build-with-linux-kernel-5.0.patch
+	makefile-check.patch
+"
 
-builddir="$srcdir"/miniupnpd-$pkgver
 prepare() {
 	default_prepare
 	mv Makefile.linux Makefile
@@ -40,20 +40,23 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	make
 }
 
+check() {
+	make check
+}
+
 package() {
-	cd "$builddir"
 	make PREFIX="$pkgdir/" install
 	install -m755 -D "$srcdir"/$pkgname.initd \
 		"$pkgdir"/etc/init.d/$pkgname
 	install -m644 -D "$srcdir"/$pkgname.confd \
 		"$pkgdir"/etc/conf.d/$pkgname
-
 }
 
 sha512sums="c737faad21bfba1f59346cbe0082d24827f36c0422cfaa5e71180aa9f61e784eb19ea9d6abf2d005f92d4cde106eac8c66ecc88b30421de710f3c129ac15f4ae  miniupnpd-2.1.tar.gz
-a25b2a444cde623fbdbe6fb26c544614cceb2cc1262a0409f40286f4c69b70ba1c05e55815552a12b0624b16ddd48d3e424dad18b278ff9da04bac335feb1d45  miniupnpd.initd
-81aa2dac0643bbd1331549427c438900319adce91928b6bad6f7d470492f6f48e04e4d1af89f961db53fc132a7ff89ea52625441f051afd5a1b48680917f4ff7  miniupnpd.confd"
+e00fcd1e55620929617d2c4958294461894b10f3d08dcaa4d66fe5c51cf4b2a634dbf8b27d63943a8fdc9fa0e75c169ba615cb30957f16443540ba26d4570750  miniupnpd.initd
+81aa2dac0643bbd1331549427c438900319adce91928b6bad6f7d470492f6f48e04e4d1af89f961db53fc132a7ff89ea52625441f051afd5a1b48680917f4ff7  miniupnpd.confd
+57319ba5c5bf4be2f7394e047d28f10aec9d49bb474e92ce5ce1d14807de5535e8842d5055f00c0a713082e012a5c26ba5484195c3ff2fe0bca3ccf49e3e33df  build-with-linux-kernel-5.0.patch
+678024e641483824505dd1a916a48c8392a96317a2eb60c59b2e1fbb436f1a134d8ba50fa974f6072facb4894adffaa52f8400db5c8356f18a40074719eee3c0  makefile-check.patch"
