--- a/main/syslog-ng/APKBUILD
+++ b/main/syslog-ng/APKBUILD
@@ -4,8 +4,8 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: jv <jens@eisfair.org>
 pkgname=syslog-ng
-pkgver=3.25.1
-pkgrel=1
+pkgver=3.26.1
+pkgrel=0
 pkgdesc="Next generation logging daemon"
 url="https://www.syslog-ng.com/products/open-source-log-management/"
 arch="all"
@@ -118,6 +118,9 @@ package() {
 	# solaris, which does provide reentrant versions under a different sig
 	rm -f usr/lib/$pkgname/libtfgetent.so
 
+	# Remove static file
+	rm -f usr/lib/libsyslog-ng-native-connector.a
+
 	install -m 644 "$srcdir"/$pkgname.conf etc/$pkgname/$pkgname.conf
 	install -D -m 755 "$srcdir"/$pkgname.initd etc/init.d/$pkgname
 	install -D -m 644 "$srcdir"/$pkgname.logrotate etc/logrotate.d/$pkgname
@@ -169,7 +172,7 @@ _submv() {
 	done
 }
 
-sha512sums="79e09f1ba11080179c572016ce27328a28d479e68e663d39fb16624c03dc37d8439020ede922f78680e31e21629a6c13a4671464a31213c1dcf6acd2c5cd4b13  syslog-ng-3.25.1.tar.gz
+sha512sums="2cf6a8bd70addec3bef0888539f4a4686c30655698835d0c211ea929a0cae91a6f3dc9903f29fe717fd9d48b5cdc9918796f196ca84af6f5733bedff09ffab5a  syslog-ng-3.26.1.tar.gz
 3e844f70564325f7b356e6cb6310c72473aedc14f8be3c3c7eb262184c84523648d3ea1de1aa40489529c97343026481e790ad92dfbcdc410a94e734fd744fc0  syslog-ng.conf
 1825b85fb584c5cecf0ad370e81a7473b5c973ce10adce386d1ba5f68432abe4e2f54c937d7d94edb22dbd9031eff483bd113bc3244ce0d0072cf4bf4ab5c2cc  syslog-ng.logrotate
 873fef8815131f0acc618fa4911cd1eda59e260adc1eaae6eb91034900ce789f05ee48fa8afa4a87763026c18c87aef351e7ea76e0cbb46bcd5297f9ca14d527  syslog-ng.initd"
