--- a/community/gitea/APKBUILD
+++ b/community/gitea/APKBUILD
@@ -11,7 +11,7 @@ license="MIT"
 options="chmod-clean"
 depends="git git-lfs gnupg"
 makedepends="go libcap nodejs npm"
-checkdepends="bash git git-lfs gnupg openssh openssh-keygen sqlite"
+checkdepends="bash openssh openssh-keygen sqlite"
 install="$pkgname.pre-install"
 pkgusers="gitea"
 pkggroups="www-data"
@@ -23,7 +23,7 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/go-gitea/gitea/archive/v$pkg
 builddir="$srcdir/src/code.gitea.io/$pkgname"
 
 case "$CARCH" in
-s390x|x86) options="!check" ;;
+	x86_64|s390x|x86) options="!check" ;;
 esac
 
 prepare() {
