community/bitcoin: upgrade to 0.19.1

--- a/community/bitcoin/APKBUILD
+++ b/community/bitcoin/APKBUILD
@@ -1,8 +1,7 @@
 # Contributor: Natanael Copa <ncopa@alpinelinux.org>
 # Maintainer: Stuart Cardall <developer@it-offshore.co.uk>
 pkgname=bitcoin
-pkgver=0.19.0.1
-_ver=${pkgver/_/}
+pkgver=0.19.1
 pkgrel=0
 pkgdesc="Decentralized P2P electronic cash system"
 url="https://www.bitcoin.org"
@@ -13,17 +12,18 @@ makedepends="autoconf automake libtool boost-dev openssl-dev db-dev miniupnpc-de
 install="$pkgname.post-install $pkgname.post-upgrade $pkgname.pre-install"
 subpackages="$pkgname-dev $pkgname-qt $pkgname-cli $pkgname-tx $pkgname-tests $pkgname-bench
 	$pkgname-doc $pkgname-openrc"
-source="$pkgname-$_ver.tar.gz::https://github.com/bitcoin/bitcoin/archive/v${_ver}.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/bitcoin/bitcoin/archive/v$pkgver.tar.gz
 	ssize_t.patch
-	wallet-unbreak-with-boost-1.72.patch
 	$pkgname.initd
 	$pkgname.conf
 	"
-builddir="$srcdir/bitcoin-$_ver"
+
+prepare() {
+	default_prepare
+	./autogen.sh
+}
 
 build() {
-	cd "$builddir"
-	./autogen.sh
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -38,8 +38,11 @@ build() {
 	make
 }
 
+check() {
+	make check
+}
+
 package() {
-	cd "$builddir"
 	make install DESTDIR="$pkgdir"
 	install -m755 -D "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/$pkgname
 	install -m600 -D "$srcdir"/$pkgname.conf "$pkgdir"/etc/$pkgname.conf
@@ -84,13 +87,7 @@ dev() {
 	mv "$pkgdir"/usr/include "$subpkgdir"/usr/
 }
 
-check() {
-	cd "$builddir"
-	make check
-}
-
-sha512sums="e8c1f22a604ffab04cbcabb344f5e8933d1c54413e4e84cbeff71f7ea5ba31fe9472aa3f684a7d02081c3eb2543524fb07aa97f130a4a22c8a6776b531d2b986  bitcoin-0.19.0.1.tar.gz
+sha512sums="a8750eac35c24a35b580d7b20f8a8ad9236ccffc28526b287581f9926cb6bfc7b4e953bdf251cfc3fafb451efbcaed7e073f90374c177383489158452a3caa79  bitcoin-0.19.1.tar.gz
 98aa5ad81bdb4ae961b791bc978c39117cdf2d83c2181f92bebbb0db107d9b6e86eda265fb3f93ff8a5ca8a7754d7148818b98095d57201dff9363d60b97e7dd  ssize_t.patch
-840c21ec405e5b326b6042addfe49f456aeb3d8fdbb6104fd9c72043f681c19373eadc5c7a215f70669d76e4148931f572e9b3769a8f03e5aa82d98d732df315  wallet-unbreak-with-boost-1.72.patch
 71e5f3b5079a22b6ddecfad89363fc642d5ea7da18f1203057f626d214734467f4b933b839c269401be7af2c3dcc01afcb3b98198b7d580c56d8740b34451558  bitcoin.initd
 a31210d8db76c5a9b614a6de756c1678c0344898565ac3e5d6a34ac1bed66aec4964f1dc874294bc978f53b0e961df921655f7309df19b66c90aa6bd40379a09  bitcoin.conf"
