--- a/main/fuse/APKBUILD
+++ b/main/fuse/APKBUILD
@@ -1,27 +1,24 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=fuse
-pkgver=2.9.8
-pkgrel=2
+pkgver=2.9.9
+pkgrel=0
 pkgdesc="A library that makes it possible to implement a filesystem in a userspace program."
-url="https://github.com/libfuse/"
+url="https://github.com/libfuse/libfuse/"
 arch="all"
 license="GPL-2.0-only LGPL-2.1-only"
+options="suid !check" # No test suite
 depends="fuse-common"
 makedepends="gettext-dev"
-install=
 subpackages="$pkgname-dev $pkgname-doc"
 source="https://github.com/libfuse/libfuse/releases/download/fuse-$pkgver/fuse-$pkgver.tar.gz
 	fix-realpath.patch
 	"
-options="suid !check"  # No test suite.
-builddir="$srcdir"/$pkgname-$pkgver
 
 # secfixes:
 #   2.9.8-r0:
 #   - CVE-2018-10906
 
 build() {
-	cd "$builddir"
 	UDEV_RULES_PATH='/lib/udev/rules.d' ./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -36,10 +33,9 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	rm -r "$pkgdir"/dev "$pkgdir"/etc/init.d
 }
 
-sha512sums="0a9b14d96c6f98f5c903baf00114bfff72f9aeb97224702bbed370516b2b582401d5b436fcef979918ffd85d69ba4a82c8f722c0b35ebd50f7aa5f4ddfdcf8ad  fuse-2.9.8.tar.gz
-5672ceb35acabb4bd97b6efc30614f22def62882fe198e2a8598a074d45b6b5337c082a5e09b5e399b6e5212dc1fbde9071c2a5051534c32091444c350b9c657  fix-realpath.patch"
+sha512sums="3d82fafd04f2924299bb09d2bb144935fa004a43fb9a6568e2e1cc5a60fded2efa1711029a0d7f12b3e6e4501f7217f2ee3545646d89da8dece083cb390f23e2  fuse-2.9.9.tar.gz
+6f2234d3a049f9df6d2dfa00c962239f4684ba0c3a4931d697bde5a250795e0a4b057c9342f4668cd81a855222814fbe49a99b5a1274199d37599d59543eff5c  fix-realpath.patch"
