main/libtirpc: build variant -nokrb without GSS-API/Kerberos
To avoid unnecessary dependency on krb5-libs in programs that
use libtirpc, but don't use/need GSS-API/Kerberos.

--- a/main/libtirpc/APKBUILD
+++ b/main/libtirpc/APKBUILD
@@ -1,33 +1,67 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libtirpc
 pkgver=1.2.5
-pkgrel=0
+pkgrel=1
 pkgdesc="Transport Independent RPC library (SunRPC replacement)"
 url="https://sourceforge.net/projects/libtirpc"
 arch="all"
 license="BSD-3-Clause"
 options="!check"
+depends="$pkgname-conf"
 depends_dev="krb5-dev bsd-compat-headers"
 makedepends="$depends_dev autoconf automake libtool linux-headers"
-subpackages="$pkgname-static $pkgname-dev $pkgname-doc $pkgname-dbg"
-source="https://sourceforge.net/projects/libtirpc/files/libtirpc/$pkgver/libtirpc-$pkgver.tar.bz2"
+subpackages="
+	$pkgname-static
+	$pkgname-dev
+	$pkgname-doc
+	$pkgname-dbg
+	$pkgname-conf::noarch
+	$pkgname-nokrb
+	"
+source="https://sourceforge.net/projects/libtirpc/files/libtirpc/$pkgver/libtirpc-$pkgver.tar.bz2
+	soname-suffix.patch
+	"
 
 prepare() {
 	default_prepare
 	autoreconf -fi
+
+	cp -r "$builddir" "$builddir-nokrb"
 }
 
 build() {
+	_build SONAME_SUFFIX=''
+
+	cd "$builddir-nokrb"
+	_build --disable-gssapi SONAME_SUFFIX='-nokrb'
+}
+
+_build() {
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
-		--sysconf=/etc
+		--sysconf=/etc \
+		"$@"
 	make
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
+	make -C "$builddir-nokrb" install DESTDIR="$pkgdir"
+	make install DESTDIR="$pkgdir"
 }
 
-sha512sums="d31cd4e22301abe1baddd7e8f45aaaf056a40799e961646691d071084fed50563b5eecdd9b78062fe378be8db7a6d4b87597e21cb81ac925e447148684a2b002  libtirpc-1.2.5.tar.bz2"
+conf() {
+	pkgdesc="Configuration files for TI-RPC"
+
+	amove etc/
+}
+
+nokrb() {
+	pkgdesc="$pkgdesc - without GSS-API/Kerberos"
+
+	amove usr/lib/libtirpc-nokrb.*
+}
+
+sha512sums="d31cd4e22301abe1baddd7e8f45aaaf056a40799e961646691d071084fed50563b5eecdd9b78062fe378be8db7a6d4b87597e21cb81ac925e447148684a2b002  libtirpc-1.2.5.tar.bz2
+ccb6352c3c3b896765581595b9a0e45a527c34cbc16495d3890f996a2bc077a02ceae0ddd63505b3420a8414b93a267c82a11bc75997de8f9ca0a22e4c4daa5c  soname-suffix.patch"
