community/open-vm-tools: build without -fpermissive
This flag was added in 26895cf93ebbbf17a0081d9cf853fb7b3f0eea60
because of switch from openssl to libressl. Since we have returned
back to openssl, this flag is not needed anymore.

--- a/community/open-vm-tools/APKBUILD
+++ b/community/open-vm-tools/APKBUILD
@@ -97,7 +97,7 @@ prepare() {
 build() {
 	export CUSTOM_PROCPS_NAME="procps"
 	export CFLAGS="$CFLAGS -Wno-unused-but-set-variable -D_GNU_SOURCE"
-	export CXXFLAGS="$CXXFLAGS -std=gnu++11 -fpermissive"
+	export CXXFLAGS="$CXXFLAGS -std=gnu++11"
 
 	cd open-vm-tools
 
