--- a/community/imagemagick/APKBUILD
+++ b/community/imagemagick/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=imagemagick
 _pkgname=ImageMagick
-pkgver=7.0.9.26
+pkgver=7.0.10.0
 pkgrel=0
 _pkgver=${pkgver%.*}-${pkgver##*.}
 _abiver=7
@@ -114,8 +114,7 @@ build() {
 		--with-xml \
 		--with-perl \
 		--with-perl-options="PREFIX=/usr INSTALLDIRS=vendor" \
-		$_conf_args \
-		$_pic
+		$_conf_args
 	make
 }
 
@@ -134,8 +133,8 @@ package() {
 	# for the modules
 	rm "$pkgdir"/usr/lib/*.la
 
-	find "$pkgdir" -name '.packlist' -o -name 'perllocal.pod' \
-		-o -name '*.bs' -delete
+	find "$pkgdir" \( -name '.packlist' -o -name 'perllocal.pod' \
+		-o -name '*.bs' \) -delete
 }
 
 _cxx() {
@@ -161,5 +160,5 @@ _perlmagick_doc() {
 	make -j1 DESTDIR="$subpkgdir" doc_vendor_install
 }
 
-sha512sums="2bfe9cb1f66466ba51d2c45d2650e65d7cdeafbfdf88290ae48c69a6074d8aba84b9ca5781291f540c39e71c0c04300c121a495c681186bf85faf28c2b7fd298  ImageMagick-7.0.9-26.tar.gz
+sha512sums="27ddfe67c0b9151390496a0ae981d8a99ee82b09a8cfa0feb429df05f58a601187792547e11a39dfbcb323f1c007b9cc724bbbaa73dd8fef5bb1b28373c1cab4  ImageMagick-7.0.10-0.tar.gz
 58afb2da075a6208b6a990ff297b3a827d260687c3355198a8b4d987e1596c0b0cd78aff6f0be0e1896e537fbe44a3d467473183f5f149664ea6e6fb3d3291a9  disable-avaraging-tests.patch"
