testing/kubernetes: upgrade to 1.17.3

--- a/testing/kubernetes/APKBUILD
+++ b/testing/kubernetes/APKBUILD
@@ -3,12 +3,12 @@
 # Contributor: Tiago Ilieve <tiago.myhro@gmail.com>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=kubernetes
-pkgver=1.15.3
-pkgrel=2
+pkgver=1.17.3
+pkgrel=0
 pkgdesc="Container Cluster Manager for Docker"
 url="https://kubernetes.io/"
-#arch="x86_64 armhf"
-arch=""
+arch="x86_64 armhf"
+#arch=""
 license="Apache-2.0"
 options="!check" # Tests hang
 depends="bash"
@@ -90,10 +90,10 @@ cleanup_srcdir() {
 	default_cleanup_srcdir
 }
 
-sha512sums="b4c3f65f7ae6c9b3e1bb8efd5182a0c922e372c0b8db77b71cd52025c7a00f592ad450c042d78b1d54b716c328c0b291296b36c102579a416b9cd8dda1be8ad2  kubernetes-1.15.3.tar.gz
+sha512sums="09b33377de0bdd7dc8ac2ae81196d15eeb93862cb0aba1256bcfca38d2ce1f15951ad70cf67600fc3d16c1d449e0451707e756ec21ad812c6628ae1f0fdda427  kubernetes-1.17.3.tar.gz
 bfe072d2f53543b8d704319755f3cfe5ed2467b54879e22117a25a9d7d6d4d238356e45824deaf4d18b8e9eb6f34d1de43be4840b9906f7909478ffe9e8a65ff  ensure-cgo-usage.patch
 8faa8f1c777740ed33ac4e46e8e47e9092098b6e672cf57a10caab2212b9b5c6965361fe7107d1311227e6145e2ad312982dc0340feb36b03ebb04e1202366f0  make-e2e_node-run-over-distro-bins.patch
-d2d50f869160c266ec677be58f0401fb6446129de3e194b4c8599a6a8000d42290de553ee07b488fcdda80ffe94c640e0846ffbd7fbca94c5684d5f373e4c9f3  make-test-cmd-run-over-hyperkube-based-kubectl.patch
+56201491d2dfe3a487931cbf5c6e60af898701b9541a936d80e3823948fcfb98508e3d51f4aaa415ce971f7bd20a7b51f74f025c76b83f58d5a8de8ce0ab679b  make-test-cmd-run-over-hyperkube-based-kubectl.patch
 13f90690564664cc1d7ca26ed3f62fea42b84050f8fd2432ff16fce21d42c7a2e9935739ab4dcb01b5289879522ecdd2d00bfe01337c3836766ce430f513245f  bindata.patch
 8f4c98fe007ead2528f8efdb1117a752230d1c4039bc91fad5caf2919aa19f3fbe866c0b96b801cf4ed43d949e79da907003666fa447e4eda9b71e7d818c5315  kube-apiserver.initd
 302b2a7ec715967c0aa7d1c177d4e55b26e37ebba8d04dd37ecf627d20042fe91cd7e6192ff9d71422129b0ea54a9eec6046f505af550548bd450998924f37ee  kube-apiserver.confd
