testing/kubernetes: added option to clean-up srcdir

--- a/testing/kubernetes/APKBUILD
+++ b/testing/kubernetes/APKBUILD
@@ -10,7 +10,7 @@ url="https://kubernetes.io/"
 arch="x86_64 armhf"
 #arch=""
 license="Apache-2.0"
-options="!check" # Tests hang
+options="!check chmod-clean" # Tests hang
 depends="bash"
 makedepends="coreutils findutils go go-bindata linux-headers rsync grep"
 subpackages="$pkgname-kubeadm:_kubeadm"
