community/borgbackup: upgrade to 1.1.11

--- a/community/borgbackup/APKBUILD
+++ b/community/borgbackup/APKBUILD
@@ -3,15 +3,15 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=borgbackup
 _pkgname=borg
-pkgver=1.1.10
-pkgrel=4
+pkgver=1.1.11
+pkgrel=0
 pkgdesc="Deduplicating backup program"
 url="https://www.borgbackup.org/"
 arch="all !s390x" # limited by py3-pyzmq
 license="BSD-3-Clause"
 depends="python3 py3-pyzmq"
 makedepends="python3-dev lz4-dev acl-dev attr-dev openssl-dev linux-headers
-	py3-setuptools"
+	py3-setuptools zstd-dev"
 subpackages="$pkgname-doc
 	$pkgname-bash-completion:bashcomp:noarch
 	$pkgname-fish-completion:fishcomp:noarch
@@ -60,4 +60,4 @@ zshcomp() {
 		"$subpkgdir"/usr/share/zsh/site-functions/_$_pkgname
 }
 
-sha512sums="9315335208f10427e3105e10819817d15fd05171479252903bd51eaacb016bc3ff792d505b9203ce0b9b41ec350472bdb9a23b0128e7fe156aaa47c1608451c0  borgbackup-1.1.10.tar.gz"
+sha512sums="cf629f31d38d27ce6350670ff27b4937f2f30eddf9e0cd9209cd9d57a4ffa653f5a291ea1e1c79614dd2c08bcf5c50bc3e4e0f222e0d3cd1bbfb2d756b4a4573  borgbackup-1.1.11.tar.gz"
