main/s390-tools: upgrade to 2.12.0

--- a/main/s390-tools/APKBUILD
+++ b/main/s390-tools/APKBUILD
@@ -1,18 +1,17 @@
 # Contributor: Natanael Copa <ncopa@alpinelinux.org>
 # Maintainer: Tuan Hoang <tmhoang@linux.ibm.com>
 pkgname=s390-tools
-pkgver=2.11.0
+pkgver=2.12.0
 pkgrel=0
 pkgdesc="Tools for use with the s390 Linux kernel and device drivers"
 url="https://github.com/ibm-s390-tools/s390-tools"
 arch="s390x"
 license="MIT"
 depends="bash"
-depends_dev=""
 makedepends="$depends_dev linux-headers libexecinfo-dev zlib-dev fuse-dev ncurses-dev openssl-dev cryptsetup-dev json-c-dev"
 triggers="$pkgname.trigger=/boot"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/ibm-s390-tools/$pkgname/archive/v$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/ibm-s390-tools/s390-tools/archive/v$pkgver.tar.gz
 	0002-musl-fixes.patch
 	0004-missing-time-header.patch
 	0006-define-path-mounted.patch
@@ -33,10 +32,8 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/ibm-s390-tools/$pkgname/arch
 	Makefile.argz
 	mk-s390-cdboot.c
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
 	mkdir -p "$builddir"/libargz
 	cp "$srcdir"/argz.h "$builddir"/include/argz.h
 	cp "$srcdir"/argz.c "$builddir"/libargz/argz.c
@@ -50,24 +47,23 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make HAVE_SNMP=0 HAVE_PFM=0 DESTDIR="$pkgdir" DISTRELEASE="Alpine" install
 	install -Dm755 mk-s390-cdboot "$pkgdir"/sbin/mk-s390-cdboot
 }
 
-sha512sums="e13cb180a2ff9fc93e24f3ff6f792c7c2af665269c85d094a18bf313ef82531ebbed7b838e012750f123479d576d9f0c4a91016467fe5c5edf63262bac4946b3  s390-tools-2.11.0.tar.gz
-f30729f9eb956dedc2a47888b9ea3da6a0e28aab23833fe6493932838371d6b0aa5eef686d7f36294a5ea1cd82d8b28bb5718f484cc7ecd8ae67dc827480447f  0002-musl-fixes.patch
-5cadad403b0bce9c92e326612b2fa6d32b15b550ef9241fd77cc3b86e6e443087c29c539727a9584896624317cde9276543aeed4fa62ff1db233f8cfd8872d03  0004-missing-time-header.patch
-984fd24ff1bf2d77f6aca77e4a75334ad21a9e36ce27fabb848d82a8e68446e2effeb16a725d5b93ae178ac11379f83a003c8c0d9e408cf96419873741517c3e  0006-define-path-mounted.patch
-a0ca14c6de2415a725c44e067157c2b5a8db582f4eadbd355fadab5e050870073cf5f5e11212fd046bf24841ed60b84e1475fed115d1e307b8fc1f2da69e5fbd  0007-tunedasd-no-need-error-h.patch
+sha512sums="4903ded5368966513e1090faca04482316870cf5fc53206d17ab98b821541e2836a016bd18cd1ca49ed6b5df0dff92dd1ed257ff712920a7aa3fd74e4a6bc6a0  s390-tools-2.12.0.tar.gz
+32ef9d80a1385df3dca9c749cd0fc15c112ab662b736cef271ed70cbdaa7c8b66c41995b42f350377860a5de754bf8721cb27dc095c2e1293cfe7f5e434ef182  0002-musl-fixes.patch
+6e0f8d999eef08677e9f80d1a07e01556474723b9b00435d463428eee22babe4489257ad5c8fffb650bd0fd5714cdac01dc926e1402f9741fc1327d177ece897  0004-missing-time-header.patch
+e41548d83d53e4371afcee3601505520506d05b932aeb91f1ca86e589c010fa5d22777d4617c1e25adfc04fbcf45289cf65a8100108c878323e125e312579220  0006-define-path-mounted.patch
+ecfbba213d2a705e2a5a2697090f659670ca1a12e4568c1de87f17d11d72a1a6c524b23b4db25c0558b4e8239c27afddb94d8887d93170b359d77985018f9b9c  0007-tunedasd-no-need-error-h.patch
 bdbeb6f3873ede82487c7e4fcac84aa2bf8a922991ec32d029a64cd7142625f5a99920db0f1b6935805d7371ae5a7640c5ea577969937dd96c4f4f996b909ac3  0008-iucvterm-no-nls.patch
 798ae2128a2e419a2e76f3198ac7563e84470069571beffd673b9cfc1755f432afaa32d730fd1c43db890009f37bc11a7a00af6e7e6b41ea7ffd789469eaef25  0009-link-libexecinfo.patch
-43edeb7f3ab3f5bbc6cd43e6d04deafcfa18211886f3801a226d46679cd70fc709732d5f41d8cc421f9fb0b441a395ebd2a57512f97662531a3050819c97ba1e  0010-musl-s390x-signal-def.patch
-97f5e0482f69b64c0f71df1bc39c10126d857b9fa38775f6d4b8dabe1267a0ff5fe231c937b82da76445118eb7c37625fc30190924c479dfacc7c1b8b0a7e487  0101-zipl-dont-optimize-size.patch
-98f5a150e30752d2bec6447d8f24b89a3afda43c31ebe3e6ce940ac398ae9ebfab2c516e05686e7969461c7cf7e467e1221981a5499a9bb8a5aef2f265ec8b45  0200-dasdinfo-gnu-ext-hack.patch
-9e7550f9e19ee287b514893206edf70f4b4e45988a2e5d590f6b6902108a4581bda5c6904e4b10b08897771d6af7beb8632f21601ccad42cc385045823be159e  0300-disable-program-using-gnu-ext.patch
-6ef9ae36d28317d5148f434cff8885ba69688f2cc44bf3c50815b3651783109e21b4137f373ae41608bb90445e193f8e49aa30ce73152533ea0a60672598b28a  bash.patch
-260881383991968d18377a9581a5393328f1ea5eca00e5efb7fe1425c8316312a313e4b751b8af70f8ee137fc57a29147653c11926db426c03cf080f8e45855b  argz.patch
+f785a899583de8592422e5e46c4e4893196e3c7885e4a0bb4c717c3587db8c1a4c264c80337b1d0c31b39150f3c3b71b876fe156086ace3a542c12678ae7c85e  0010-musl-s390x-signal-def.patch
+f8565253e87e717ea943101b3d270109260099481764ba7905a72c2c5817885a7071ce656ff59a697d075dd4c0b2eb8d02f6aeeb2cb98e47ac1f27d08b109137  0101-zipl-dont-optimize-size.patch
+f5e06e28f77c44f591d74f383ce308a6bfb129b00b291601f2be8866dd1382c597348794be2109c9dc0fa8fdbbee509d036fa6c215e73c4c99f476d3c1cb5a83  0200-dasdinfo-gnu-ext-hack.patch
+78ec9fa561f039ea44c2efb9ce7ad396746f1c2889165836342a0584266fc514599aff9f8ace7ac420d62de3543d09d2082bcdccaebb616ba4928b847d7466ab  0300-disable-program-using-gnu-ext.patch
+0c4b8da70b6e64ff2da56cda6e89c95654b4c9c75376e9a5165c1083c832e85386f70990539c6ab101ed64fe30bf94ae4709aabf967fdd773b0b6b19b8c4aee8  bash.patch
+96e204ffde62e6c9e43a9d7d5e4120054fa9ae8cd8a94e7ea02569228115d2e8c903faf9db093bf9a2341089e0384c4155fcf0fd8d6e8030bff3f5c28ca9884c  argz.patch
 2e573314d4c4ed90b61da28de22ae8e2f68ced5489f7e5e0b30f51b776efaf40c1f781d3b485418572d8f33a169fa6946b7358cbd4a7de5a3724b20ed622262b  argz.c
 50bd5c0f555963dadbfaa72df5bf0801a48743d6d0feddb6ebfa4ffa410196216c1860d3a577361e035169fea4217aef3f04d69394c59db65b60c5ea29eba8cb  argz.h
 5e19ccfce59a2a79863db676b0ea4280cb9016cda1a30dc233526f52425c305410dd148453b75c2613acac37e364305ee25f8e545d57c5059cca19a13bac2a5e  Makefile.argz
