testing/kubernets: removed binaries no longer shipped

--- a/testing/kubernetes/APKBUILD
+++ b/testing/kubernetes/APKBUILD
@@ -8,7 +8,6 @@ pkgrel=0
 pkgdesc="Container Cluster Manager for Docker"
 url="https://kubernetes.io/"
 arch="x86_64 armhf"
-#arch=""
 license="Apache-2.0"
 options="!check chmod-clean" # Tests hang
 depends="bash"
@@ -46,10 +45,8 @@ build() {
 }
 
 package() {
-	local binaries="hyperkube
-			kube-apiserver
+	local binaries="kube-apiserver
 			kube-controller-manager
-			cloud-controller-manager
 			kube-scheduler
 			kubeadm
 			kubectl
