main/libtirpc: fix location of config files

--- a/main/libtirpc/APKBUILD
+++ b/main/libtirpc/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libtirpc
 pkgver=1.2.5
-pkgrel=1
+pkgrel=2
 pkgdesc="Transport Independent RPC library (SunRPC replacement)"
 url="https://sourceforge.net/projects/libtirpc"
 arch="all"
@@ -54,7 +54,7 @@ package() {
 conf() {
 	pkgdesc="Configuration files for TI-RPC"
 
-	amove etc/
+	amove etc/*
 }
 
 nokrb() {
