--- a/testing/trivy/APKBUILD
+++ b/testing/trivy/APKBUILD
@@ -5,7 +5,7 @@ pkgver=0.5.2
 pkgrel=0
 pkgdesc="A Simple and Comprehensive Vulnerability Scanner for Containers, Suitable for CI"
 url="https://github.com/aquasecurity/trivy"
-arch="all"
+arch="all !s390x" # tests SIGSEGV on s390x
 license="AGPL-3.0-or-later"
 makedepends="btrfs-progs-dev go linux-headers lvm2-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/aquasecurity/trivy/archive/v$pkgver.tar.gz"
