testing/polari: disable on s390x

--- a/testing/polari/APKBUILD
+++ b/testing/polari/APKBUILD
@@ -5,7 +5,7 @@ pkgver=3.36.0
 pkgrel=1
 pkgdesc="Polari is a simple IRC Client that is designed to integrate seamlessly with GNOME 3"
 url="https://wiki.gnome.org/Apps/Polari"
-arch="all"
+arch="all !s390x" # missing dep: gjs
 license="GPL-2.0-or-later"
 makedepends="meson gobject-introspection-dev gtk+3.0-dev telepathy-glib-dev
 	gjs-dev itstool"
