testing/nymphcast: add custom init file
The one upstream uses paths that are not correct in Alpine

--- a/testing/nymphcast/APKBUILD
+++ b/testing/nymphcast/APKBUILD
@@ -2,15 +2,16 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=nymphcast
 pkgver=0_git20200308
-pkgrel=0
+pkgrel=1
 _commit="ad8f817263b7c57eff262d1454e03cd08d626e44"
 arch="all !armv7" # Assembly failure
 url="http://nyanko.ws/product_nymphcast.php"
-pkgdesc="Audio and video casting system with support for custom application"
+pkgdesc="Audio and video casting system with support for custom applications"
 license="BSD-3-Clause"
 depends="avahi"
 makedepends="nymphrpc-static nymphrpc-dev sdl2-dev sdl2_image-dev ffmpeg-dev openssl-dev"
-source="$pkgname-$_commit.tar.gz::https://github.com/MayaPosch/NymphCast/archive/$_commit.tar.gz"
+source="$pkgname-$_commit.tar.gz::https://github.com/MayaPosch/NymphCast/archive/$_commit.tar.gz
+	nymphcast.initd"
 subpackages="$pkgname-static $pkgname-dev $pkgname-openrc"
 options="!check" # No tests
 builddir="$srcdir/NymphCast-$_commit"
@@ -36,7 +37,7 @@ package() {
 		install -Dm644 "$file" "$pkgdir"/usr/share/nymphcast/wallpapers/$file
 	done
 
-	install -Dm755 openrc/nymphcast "$pkgdir"/etc/init.d/nymphcast
+	install -Dm755 "$srcdir"/nymphcast.initd "$pkgdir"/etc/init.d/nymphcast
 
 	install -Dm644 avahi/nymphcast.service "$pkgdir"/etc/avahi/services/nymphcast.service
 
@@ -46,4 +47,5 @@ package() {
 	install -Dm644 nymphcast_client.h "$pkgdir"/usr/include/nymphcast_client.h
 }
 
-sha512sums="15003804d78853e2aff8fcd217e3c1ded83159834c745913328b3dbe5c1473080353c56e0a2828e56310ca4a9e75581e828f1d8c88cec1d6b06e8ed87893207f  nymphcast-ad8f817263b7c57eff262d1454e03cd08d626e44.tar.gz"
+sha512sums="15003804d78853e2aff8fcd217e3c1ded83159834c745913328b3dbe5c1473080353c56e0a2828e56310ca4a9e75581e828f1d8c88cec1d6b06e8ed87893207f  nymphcast-ad8f817263b7c57eff262d1454e03cd08d626e44.tar.gz
+1ab3f0dad11bca5790a2a637bc624c6b80990d09990a9f5ef3a4537c9c04abf40924633c571ffa86758886d5f21253bb5d0369b17b01f90dcc39b3e609caa405  nymphcast.initd"
