--- a/community/dub/APKBUILD
+++ b/community/dub/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Mathias LANG <pro.mathias.lang@gmail.com>
 # Maintainer: Mathias LANG <pro.mathias.lang@gmail.com>
 pkgname=dub
-pkgver=1.19.0
+pkgver=1.20.0
 pkgrel=0
 pkgdesc="Package and build management system for D"
 url="http://code.dlang.org/"
@@ -9,10 +9,14 @@ arch="all !ppc64le" # GDC does not support PPC64le
 license="MIT"
 depends="libcurl"
 makedepends="gcc-gdc gdmd bash curl-dev"
+subpackages="$pkgname-zsh-completion:zsh:noarch $pkgname-doc:doc:noarch"
 source="$pkgname-$pkgver.zip::https://github.com/dlang/dub/archive/v$pkgver.zip"
 
 build() {
-	DC=gdmd GITVER="v$pkgver" ./build.sh
+	DMD=gdmd GITVER="v$pkgver" gdmd -run "$builddir/build.d"
+
+	# Build man pages
+	"$builddir/bin/dub" scripts/man/gen_man.d
 }
 
 check() {
@@ -21,6 +25,31 @@ check() {
 
 package() {
 	install -s -D "$builddir/bin/dub" "$pkgdir/usr/bin/dub"
+	install -Dm644 "$builddir/scripts/zsh-completion/_dub" "$pkgdir/usr/share/zsh/site-functions/_dub"
+	mkdir -p "$pkgdir/usr/share/man/man1/"
+	cp "$builddir"/scripts/man/*.1 "$pkgdir/usr/share/man/man1/"
 }
 
-sha512sums="8cdeb1b2d07a003c02e47f43f56362aeac257110cc4a477f5fe2e83ff0b979f5e1b3aa553d75d97b16c22230ff823ac3cf9dec40c2c24211cac969bfe7deb522  dub-1.19.0.zip"
+zsh() {
+	pkgdesc="Zsh completion for dub"
+	depends=""
+	install_if="$pkgname=$pkgver-r$pkgrel zsh"
+
+	mkdir -p "$subpkgdir"/usr/share/zsh/site-functions
+	mv "$pkgdir"/usr/share/zsh/site-functions/* \
+		"$subpkgdir"/usr/share/zsh/site-functions
+}
+
+doc() {
+	pkgdesc="Man pages for dub"
+	depends=""
+	install_if="$pkgname=$pkgver-r$pkgrel docs"
+
+	gzip -9 "$pkgdir"/usr/share/man/man1/*
+	mkdir -p "$subpkgdir"/usr/share/man/man1
+	mv "$pkgdir"/usr/share/man/man1/* "$subpkgdir"/usr/share/man/man1/
+	# Satisfy the linter
+	rmdir "$pkgdir"/usr/share/man/man1/
+}
+
+sha512sums="ce24097e6ce5ad4acc43af0ef15f69d33aa0ee7717a96769d1125705ed2aa557554cacd8dd6831bc704d4fa93801dcb3f4603795b576c2e0802b20477d208d88  dub-1.20.0.zip"
