--- a/testing/kops/APKBUILD
+++ b/testing/kops/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Kaarle Ritvanen <kaarle.ritvanen@datakunkku.fi>
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=kops
-pkgver=1.14.0
+pkgver=1.16.0
 pkgrel=0
 pkgdesc="Kubernetes Operations"
 url="https://github.com/kubernetes/kops"
@@ -9,8 +9,8 @@ arch="x86_64"
 license="Apache-2.0"
 depends="kubernetes"
 makedepends="go"
+options="chmod-clean"
 source="$pkgname-$pkgver.tar.gz::$url/archive/$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
 
 export GOPATH=$srcdir/go
 
@@ -23,12 +23,10 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	make
 }
 
 check() {
-	cd "$builddir"
 	make test
 }
 
@@ -36,4 +34,4 @@ package() {
 	install -D "$GOPATH"/bin/kops "$pkgdir"/usr/bin/kops
 }
 
-sha512sums="d0c4907982e15b68a5fe0f453215d6c10b331e3e69dbc1c2d23fe40196fbb23f1d6f99d8d189697077023a534cbbd04ed73d0cb1a3391766a7fe6a71d9ae577c  kops-1.14.0.tar.gz"
+sha512sums="655a97d4fc0d2291a9b9ff4dfb737597464df267e4a232d9f0828f92627e9e2d2493f635718e5d42db8d5edda96c7e231704a57cf6b9d602add9ab2cf25eac82  kops-1.16.0.tar.gz"
