testing/apk-readme: remove in favor of apk-post-messages

--- a/community/apk-post-messages/APKBUILD
+++ b/community/apk-post-messages/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Stuart Cardall <developer@it-offshore.co.uk>
 # Maintainer: Stuart Cardall <developer@it-offshore.co.uk>
 pkgname=apk-post-messages
-pkgver=0.11
+pkgver=0.12
 pkgrel=0
 pkgdesc="Print apk post-install messages"
 url="https://alpinelinux.org"
@@ -9,6 +9,7 @@ arch="noarch"
 license="GPL-2.0-or-later"
 depends="apk-tools"
 triggers="$pkgname.trigger=/usr/share/doc/*"
+provides="apk-readme=0.2-r0"
 
 options="!check" # Package has no code
 builddir="$srcdir"
