main/rust: Add support for UEFI targets
Enable support for compiling for UEFI targets. This includes compiling
binaries such as bootloaders, stubs for EFI bundles and similar utilities.

Specifically, I used this functionality to finish work a minimal EFI
stub, candyboot: https://git.sr.ht/~whynothugo/candyboot

The UEFI target is only supported by LLVM. GCC cannot produce native EFI
binaries. When compiling for a UEFI target, GCC produces ELF binaries
and uses GNU-EFI as a stub loader to run them inside EFI environments.
This approach does not work when compiling Rust.

The profiler_builtins crate fails to build for the UEFI target; it is a
C component which requires a UEFI specific sysroot to compile. During
coordination with upstream, it came up these compiler built-ins could
not be disabled on a per-target basis. This is now implemented upstream,
and available in Rust stable since 1.86.0.

See: https://github.com/rust-lang/rust/pull/135326/

--- a/main/rust/APKBUILD
+++ b/main/rust/APKBUILD
@@ -34,6 +34,7 @@ depends="gcc musl-dev"
 makedepends_build="
 	!libgit2-dev
 	cargo-bootstrap>=$_bootver
+	clang$_llvmver
 	coreutils
 	curl-dev
 	file
@@ -90,6 +91,11 @@ subpackages="cargo"
 	rustc-dev:_rustc_dev
 	rustfmt
 	"
+[ -z "$BOOTSTRAP" ] && case "$CTARGET" in
+	aarch64*|x86_64*)
+	subpackages="$subpackages $pkgname-uefi"
+	;;
+esac
 source="https://static.rust-lang.org/dist/rustc-$pkgver-src.tar.xz
 	alpine-move-py-scripts-to-share.patch
 	alpine-target.patch
@@ -101,6 +107,7 @@ source="https://static.rust-lang.org/dist/rustc-$pkgver-src.tar.xz
 	need-ssp_nonshared.patch
 	no-export-ld-library-path.patch
 	system-wasm-ld.patch
+	system-uefi-ld.patch
 	check-rustc
 	"
 builddir="$srcdir/rustc-$pkgver-src"
@@ -255,6 +262,14 @@ build() {
 			--set=target.wasm32-wasip2.wasi-root=/usr/share/wasi-sysroot
 			'
 	fi
+	local _uefi_target=${CTARGET%%-*}-unknown-uefi
+	if subpackage_types_has uefi; then
+		targets="$targets,$_uefi_target"
+		# Too many jobs uses too much memory and fails with OOM error.
+		# This compounds when building this extra target.
+		cores=$(nproc)
+		JOBS=$((cores / 3 + 1))
+	fi
 
 	# ./configure will not run when config.toml exists,
 	# so assume we are restarting the build with ./x.py
@@ -295,6 +310,10 @@ build() {
 		--set="target.$_target.cxx=${CROSS_COMPILE}c++" \
 		--set="target.$_target.ar=${CROSS_COMPILE}ar" \
 		--set="target.$_target.linker=${CROSS_COMPILE}cc" \
+		--set="target.$_uefi_target.crt-static=true" \
+		--set="target.$_uefi_target.cc=clang-$_llvmver" \
+		--set="target.$_uefi_target.profiler=false" \
+		--set="target.$_uefi_target.optimized-compiler-builtins=false" \
 		--set="target.$_build.musl-root=/usr" \
 		--set="target.$_build.crt-static=false" \
 		--set="target.$_build.cc=cc" \
@@ -380,6 +399,9 @@ package() {
 		_unpack_build_dist rust-std-wasm32-wasip1-threads "$pkgdir/usr" &
 		_unpack_build_dist rust-std-wasm32-wasip2 "$pkgdir/usr" &
 	fi
+	if subpackage_types_has uefi; then
+		_unpack_build_dist rust-std-${_target%%-*}-unknown-uefi "$pkgdir/usr" &
+	fi
 	wait
 
 	# Prevent rustc-dev from providing the same *.so files,
@@ -445,6 +467,13 @@ wasm() {
 	depends="rust=$pkgver-r$pkgrel lld wasi-libc"
 
 	amove usr/lib/rustlib/wasm32-*
+}
+
+uefi() {
+	pkgdesc="UEFI targets for rust"
+	depends="rust=$pkgver-r$pkgrel lld"
+
+	amove usr/lib/rustlib/*-uefi
 }
 
 analysis() {
@@ -549,5 +578,6 @@ b283d31cc8d6559aa639d44f776e97c2a1e0f23c717b6784e549861b881555bd467fa6023180866a
 7c8644f5aa9138d72ef8d9d5bddc90d2767df171f92518bb5376f8ee676a62305533cb6ac045e323d6191d808f43c43cd741e8d2f09f70b41f1ef48283817e17  need-ssp_nonshared.patch
 5f2aca58a64eaa24fbcf894f8e6532fad69ba25c9e3e915fa5045de179b72053c12c7f1e87213b8bcde61acb94fa35ec79e45429cf444a62b5de81dc4c239123  no-export-ld-library-path.patch
 0a6ac7d297a49973f420c8bb678def4ceb69f74d16c542d654d37d93d55e3349acf0143a99b9aa4c39c546a5fcc92be9fead6b94e668254cdb834048f54af75a  system-wasm-ld.patch
+f3ddb29ef6055eae2112836242123eb2d2643662827a38c789d608526dc15201fe6b2e1f32a4023b86a89831497045910ca5b0f0b831e78d080169c3ef60abd5  system-uefi-ld.patch
 c31fdfe8a9b3411576c75da46645cf0465b9053000a2ab49cf9b2f2733f679d6d33acbf236d67a20e14935d094a685453b7f1840180249f39d610fd0902c3125  check-rustc
 "
